/* generated using openapi-typescript-codegen -- do not edit */
/* istanbul ignore file */
/* tslint:disable */
/* eslint-disable */
export type RegisterRequest = {
    email?: string;
    password?: string;
    fullName?: string;
    role?: string;
};

