/* generated using openapi-typescript-codegen -- do not edit */
/* istanbul ignore file */
/* tslint:disable */
/* eslint-disable */
export type RoomResponse = {
    id?: number;
    name?: string;
    location?: string;
    capacity?: number;
    description?: string;
    active?: boolean;
};

